--- a/produktliste.html
+++ b/produktliste.html
@@ -36,8 +36,8 @@
                 44%
             </div>
         </div>
-        <div class="box udsolgt_f">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="">
+        <div class="box ">
+            <img class="udsolgt_f" src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="">
             <h3>Deck Navy Blue Backpack</h3>
             <h4>Backpacks|Puma</h4>
             <p>DKK 1299,-</p>
@@ -46,14 +46,17 @@
                 <P>udsolgt</P>
             </div>
         </div>
-        <div class="box udsolgt_f">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1530.webp" alt="">
+        <div class="box ">
+            <img class="udsolgt_f" src="https://kea-alt-del.dk/t7/images/webp/640/1530.webp" alt="">
             <h3>Blue T20 Indian Cricket Jersey</h3>
             <h4>Jackets|Ferrari</h4>
             <p>DKK 4299,-</p>
             <a href="produkt.html">Read more</a>
             <div class="udsolgt">
                 udsolgt
+            </div>
+            <div class="rabat">
+                44%
             </div>
         </div>
 
