--- a/produkt.html
+++ b/produkt.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -14,40 +15,12 @@
     </a>
 
 
+    <main class="productContainer">
 
 
-    <div class="grid_1-1-1">
-
-        <img class="produkt" src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="">
-
-        <div class="flex">
-            <h2>Produkt information</h2>
-            <div>
-                <h3>Model name</h3>
-                <p>Sahara Team India Fanwear Round Neck Jersey</p>
-            </div>
-            <div>
-                <h3>Inventory number</h3>
-                <p>1163</p>
-            </div>
-
-
-
-        </div>
-
-        <div class="flex2">
-            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-            <h4>Tshirts|Nike</h4>
-            <div class="grid_1-1">
-                <p>DKK 895,-</p>
-                <div> Tilføj kurv</div>
-            </div>
-        </div>
-
-    </div>
-
-
+    </main>
 
 </body>
+
 
 </html>
