--- a/produktliste.html
+++ b/produktliste.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
     <link rel="stylesheet" href="style.css">
+    <script src="produktlise.js" defer></script>
 </head>
 
 <body>
@@ -18,47 +19,9 @@
 
     <div class="grid_1-1-1-1">
         <div class="box">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="">
-            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-            <h4>Tshirts|Nike</h4>
-            <p>DKK 895,-</p>
-            <a href="produkt.html">Read more</a>
-
 
         </div>
-        <div class="box">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="">
-            <h3>Blue T20 Indian Cricket Jersey</h3>
-            <h4>Tshirts|Nike</h4>
-            <p>DKK 1595,-</p>
-            <a href="produkt.html">Read more</a>
-            <div class="rabat">
-                44%
-            </div>
-        </div>
-        <div class="box ">
-            <img class="udsolgt_f" src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="">
-            <h3>Deck Navy Blue Backpack</h3>
-            <h4>Backpacks|Puma</h4>
-            <p>DKK 1299,-</p>
-            <a href="produkt.html">Read more</a>
-            <div class="udsolgt">
-                <P>udsolgt</P>
-            </div>
-        </div>
-        <div class="box ">
-            <img class="udsolgt_f" src="https://kea-alt-del.dk/t7/images/webp/640/1530.webp" alt="">
-            <h3>Blue T20 Indian Cricket Jersey</h3>
-            <h4>Jackets|Ferrari</h4>
-            <p>DKK 4299,-</p>
-            <a href="produkt.html">Read more</a>
-            <div class="udsolgt">
-                udsolgt
-            </div>
-            <div class="rabat">
-                44%
-            </div>
-        </div>
+
 
     </div>
 
