--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-//**** troelsAtWork *****////
+
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
     <link rel="stylesheet" href="style.css">
+    <script src="category.js" defer></script>
 </head>
 
 <body>
+    <main>
+        <h1>Tøjmøj</h1>
+        <h3>Categories</h3>
+        <div class="grid_1-1-1">
 
-    <h1>Tøjmøj</h1>
 
-    <h3>Categories</h3>
+        </div>
 
-    <div class="grid_1-1-1">
-        <a href="produktliste.html">Accessories </a>
-        <a href="produktliste.html">Apparel </a>
-        <a href="produktliste.html">Footwear </a>
-        <a href="produktliste.html">Free Items</a>
-        <a href="produktliste.html">Personal Care </a>
-        <a href="produktliste.html">Sporting Goods</a>
-    </div>
 
+    </main>
 
 
 
