--- a/produkt.html
+++ b/produkt.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-    <a href="index.html">
-        <h1>Tøjmøj</h1>
-    </a>
+    <div class="grid_1-1">
+        <a href="index.html">
+            <h1>Tøjmøj</h1>
+        </a>
+
+        <a href="index.html">Categories</a>
+
+
+    </div>
 
 
     <main class="productContainer">
