--- a/produktliste.html
+++ b/produktliste.html
@@ -10,17 +10,19 @@
 </head>
 
 <body>
-    <a href="index.html">
-        <h1>Tøjmøj</h1>
-    </a>
+    <div class="grid_1-1">
+        <a href="index.html">
+            <h1>Tøjmøj</h1>
+        </a>
 
+        <a href="index.html">Categories</a>
+
+    </div>
 
     <h2>Grimme ting</h2>
 
     <div class="grid_1-1-1-1">
-        <div class="box">
 
-        </div>
 
 
     </div>
